<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".mvvm.views.fragments.CreateOrEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size16">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size16"
            android:text="@string/name"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size4"
            android:background="@drawable/bg_input"
            android:inputType="textCapWords|textPersonName"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size12"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size12"
            android:text="@string/type"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14" />

        <EditText
            android:id="@+id/inputType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size4"
            android:background="@drawable/bg_input"
            android:inputType="textCapWords|textPersonName"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size12"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size12"
            android:text="@string/qr_code_number"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14" />

        <EditText
            android:id="@+id/inputQrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size4"
            android:background="@drawable/bg_input"
            android:inputType="number"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size12"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size12"
            android:text="@string/last_maintenance_date"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14" />

        <TextView
            android:id="@+id/txtLastMaintanceDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size4"
            android:background="@drawable/bg_input"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size12"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/font14" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16"
            android:text="@string/save" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>